--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "homepage": "https://github.com/taivs1106219/MyMood#readme",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "electron": "^32.0.1",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
