--- a/package.json
+++ b/package.json
@@ -20,12 +20,22 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "electron": "^32.0.1",
     "html-webpack-plugin": "^5.6.0",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.1",
+    "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3"
   }
 }
