--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.24.7",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
+    "classnames": "^2.5.1",
     "css-loader": "^7.1.2",
     "electron": "^32.0.1",
     "html-webpack-plugin": "^5.6.0",
