--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.5.1",
     "css-loader": "^7.1.2",
     "electron": "^32.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
