--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "openai": "^4.72.0"
   },
   "build": {
     "appId": "io.github.taivs1106219.MyMood",
@@ -61,7 +62,7 @@
     },
     "win": {
       "artifactName": "${productName}-${os}-${arch}.${ext}",
-      "icon":"./res/images/icon.png",
+      "icon": "./res/images/icon.png",
       "extraFiles": [
         "platform-tools-win"
       ],
