--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "archiver": "^7.0.1",
     "bootstrap": "^5.3.3",
     "openai": "^4.72.0"
   },
