--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
+    "tar": "^7.4.3",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   },
@@ -41,7 +42,8 @@
     "@popperjs/core": "^2.11.8",
     "archiver": "^7.0.1",
     "bootstrap": "^5.3.3",
-    "openai": "^4.72.0"
+    "openai": "^4.72.0",
+    "tar-stream": "^3.1.7"
   },
   "build": {
     "appId": "io.github.taivs1106219.MyMood",
