--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "archiver": "^7.0.1",
     "bootstrap": "^5.3.3",
     "openai": "^4.72.0",
-    "tar-stream": "^3.1.7"
+    "tar-stream": "^3.1.7",
+    "twilio": "^5.3.6"
   },
   "build": {
     "appId": "io.github.taivs1106219.MyMood",
