--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
