--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "archiver": "^7.0.1",
+    "archiver-utils": "^5.0.2",
     "bootstrap": "^5.3.3",
+    "electron-is-packaged": "^1.0.2",
     "openai": "^4.72.0",
     "tar": "^7.4.3",
     "twilio": "^5.3.6"
@@ -59,6 +61,7 @@
       "preload.js",
       "default_configs.js",
       "res",
+      "src/js/getDateNum.js",
       "dist"
     ],
     "nsis": {
